<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7FCDD1">

    <TextView
        android:id="@+id/header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:shadowColor="#0F0F0F"
        android:text="@string/add_new_string"
        android:textSize="24sp"/>

    <LinearLayout
        android:id="@+id/add_country_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/add_country_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/country_name"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@android:color/white"
            android:textSize="14sp"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_country_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginRight="100dp"
        android:hint="@string/confirm_add"
        android:text="@string/add"/>

</LinearLayout>