<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AddGenre">


        <TextView
                android:id="@+id/header_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:shadowColor="#0F0F0F"
                android:text="@string/add_new_genre"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        <Button
                android:id="@+id/add_genre_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_add"
                android:text="@string/add"
                android:onClick="addGenre" app:layout_constraintTop_toBottomOf="@+id/add_genre_edit_text"
                app:layout_constraintStart_toStartOf="@+id/header_text_view"
                app:layout_constraintEnd_toEndOf="@+id/header_text_view"/>
        <EditText
                android:id="@+id/add_genre_edit_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/genre_name"
                android:focusable="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@android:color/white"
                android:textSize="14sp"
                android:inputType="text" tools:layout_editor_absoluteX="-1dp"
                app:layout_constraintTop_toBottomOf="@+id/header_text_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>