<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="false">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AddProducer">

        <TextView
                android:id="@+id/header_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingRight="10dp"
                android:shadowColor="#0F0F0F"
                android:text="@string/producer_header"
                android:textSize="24sp"
                app:fontFamily="sans-serif-black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="21dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/producer_name_text_view"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingTop="11dp"
                android:text="@string/producer_name"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/header_text_view"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="21dp"/>

        <EditText
                android:id="@+id/producer_name_edit_text"
                android:layout_width="268dp"
                android:layout_height="31dp"
                android:background="@android:color/white"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/producer_name_hint"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/producer_name_text_view"
                app:layout_constraintTop_toTopOf="@+id/producer_name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="21dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="@+id/producer_name_text_view"
                app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:id="@+id/producer_surname_text_view"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingTop="11dp"
                android:text="@string/producer_surname"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/producer_name_text_view"
                app:layout_constraintStart_toStartOf="@+id/producer_name_text_view"/>

        <EditText
                android:id="@+id/producer_surname_edit_text"
                android:layout_width="269dp"
                android:layout_height="33dp"
                android:background="@android:color/white"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/producer_surname_hint"
                android:textAlignment="center"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/producer_name_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="21dp"
                app:layout_constraintBottom_toBottomOf="@+id/producer_surname_text_view"
                app:layout_constraintTop_toBottomOf="@+id/producer_name_edit_text"/>
        <Button
                android:text="@string/producer_add_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/add_producer_button"
                app:layout_constraintStart_toStartOf="@+id/producer_surname_text_view"
                app:layout_constraintEnd_toEndOf="@+id/producer_surname_edit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/producer_surname_edit_text"
                app:layout_constraintHorizontal_bias="0.496"
                android:onClick="addProducer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>